--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,13 +8,22 @@ dependencies = []
 
 [project.optional-dependencies]
 core = [
+    "aiohttp>=3.13.2",
     "fastapi>=0.121.3",
+    "huggingface-hub<=1",
     "pydantic>=2.12.4",
     "pyyaml>=6.0.3",
     "scalar-fastapi>=1.4.4",
     "termcolor>=3.2.0",
+    "tokenizers>=0.22.1",
+    "transformers>=4.57.3",
+    "safetensors>=0.7.0",
     "uvicorn>=0.38.0",
     "uvloop>=0.22.1",
+]
+
+inf_llamacpp = [
+    "gateway[core]",
 ]
 
 [dependency-groups]
@@ -30,18 +39,21 @@ members = [
     "src/core",
     "src/models",
     "src/inf_llm",
+    "src/hf",
 ]
 
 [tool.uv.sources]
 core = { workspace = true }
 models = { workspace = true }
 inf_llm = { workspace = true }
+hf = { workspace = true }
 
 [tool.uv]
 package = true
 
 [project.scripts]
 serve = "core.main:main"
+inf_llamacpp = "inf_llm.llamacpp.main:main"
 
 [tool.pytest.ini_options]
 markers = []
