--- a/Dockerfile.inf
+++ b/Dockerfile.inf
@@ -24,8 +24,6 @@ RUN ln -s /usr/local/cuda/lib64/stubs/libcuda.so /usr/local/cuda/lib64/stubs/lib
     -DCMAKE_BUILD_TYPE=Release \
     && cmake --build build --config Release -j$(nproc)
 
-RUN git clone https://github.com/remsky/Kokoro-FastAPI.git /build/kokoro-fastapi
-
 FROM nvidia/cuda:13.0.2-runtime-ubuntu24.04
 
 COPY --from=builder /build/build/bin/llama-server /app/llama-server
@@ -38,6 +36,7 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
     python3 \
     python3-venv \
     curl \
+    ffmpeg \
     libgomp1 \
     espeak-ng \
     libsndfile1 \
@@ -48,25 +47,24 @@ WORKDIR /app
 
 COPY pyproject.toml ./
 COPY scripts/ ./scripts/
+
 RUN uv venv /app/.venv
-RUN uv sync --no-dev --extra inf_llamacpp --no-install-project
+RUN uv sync --no-dev --extra inference --no-install-project
 
 COPY src/ ./src/
-RUN uv sync --no-dev --extra inf_llamacpp
+RUN uv sync --no-dev --extra inference
+RUN uv pip install pip
 RUN uv cache clean
 
 ENV PYTHONUNBUFFERED=1 \
     PYTHONDONTWRITEBYTECODE=1 \
     PATH="/app/.venv/bin:$PATH" \
     UV_CACHE_DIR=/tmp/uv-cache \
-    LD_LIBRARY_PATH="/app:$LD_LIBRARY_PATH" \
-    PYTHONPATH="/app/kokoro-fastapi:$PYTHONPATH"
+    LD_LIBRARY_PATH="/app:$LD_LIBRARY_PATH"
 
-EXPOSE 8001 8002
 
-HEALTHCHECK --interval=60s --timeout=10s --start-period=5s --retries=3 \
-  CMD python3 scripts/healthcheck.py || exit 1
+EXPOSE 8001 8051
 
 ENTRYPOINT []
 
-CMD ["inf_llamacpp"]
+CMD ["inf_tts"]
