--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,18 +21,35 @@ core = [
     "uvicorn>=0.38.0",
     "uvloop>=0.22.1",
     "ujson>=5.11.0",
+    "soundfile>=0.13.1",
+    "numpy>=2.3.5",
 ]
 
-inf_llamacpp = [
+inf-llamacpp = [
     "gateway[core]",
+]
+
+inf-tts = [
+    "gateway[core]",
+    "kokoro>=0.9.4",
+    "soundfile>=0.13.1",
+    "torch>=2.9.1",
+    "torchaudio>=2.9.1",
+]
+
+inference = [
+    "gateway[inf-llamacpp]",
+    "gateway[inf-tts]",
 ]
 
 [dependency-groups]
 dev = [
     "gateway[core]",
-    "ruff>=0.14.6",
+    "ruff>=0.14.7",
     "pytest>=9.0.1",
     "pyright>=1.1.407",
+    "kokoro>=0.9.4",
+    "jupyter>=1.1.1",
 ]
 
 [tool.uv.workspace]
@@ -57,6 +74,7 @@ package = true
 [project.scripts]
 serve = "core.main:main"
 inf_llamacpp = "llm.inference.llamacpp:main"
+inf_tts = "tts.inference.main:main"
 
 [tool.pytest.ini_options]
 markers = []
