--- a/supervisord.conf
+++ b/supervisord.conf
@@ -4,6 +4,16 @@ user=root
 logfile=/dev/null
 pidfile=/var/run/supervisord.pid
 
+
+; [program:inf_llamacpp]
+; command=inf_llamacpp
+; autostart=true
+; autorestart=false
+; stdout_logfile=/dev/stdout
+; stdout_logfile_maxbytes=0
+; stderr_logfile=/dev/stderr
+; stderr_logfile_maxbytes=0
+
 [program:inf_tts]
 command=inf_tts
 autostart=true
@@ -13,11 +23,11 @@ stdout_logfile_maxbytes=0
 stderr_logfile=/dev/stderr
 stderr_logfile_maxbytes=0
 
-[program:inf_llamacpp]
-command=inf_llamacpp
-autostart=true
-autorestart=false
-stdout_logfile=/dev/stdout
-stdout_logfile_maxbytes=0
-stderr_logfile=/dev/stderr
-stderr_logfile_maxbytes=0
+; [program:inf_stt]
+; command=inf_stt
+; autostart=true
+; autorestart=false
+; stdout_logfile=/dev/stdout
+; stdout_logfile_maxbytes=0
+; stderr_logfile=/dev/stderr
+; stderr_logfile_maxbytes=0
