add: generate proto in check.yaml

--- a/.github/workflows/check.yaml
+++ b/.github/workflows/check.yaml
@@ -27,5 +27,8 @@ jobs:
       - name: Install dependencies
         run: uv sync --frozen
 
+      - name: Generate Proto files
+        run: uv run scripts/gen_proto.py
+
       - name: Run Pyright
         run: uv run pyright
