--- a/Dockerfile.inf
+++ b/Dockerfile.inf
@@ -1,13 +1,8 @@
 FROM nvidia/cuda:13.0.2-devel-ubuntu24.04 AS builder
 
 ENV DEBIAN_FRONTEND=noninteractive
-
 RUN apt-get update && apt-get install -y \
-    git \
-    build-essential \
-    cmake \
-    curl \
-    libcurl4-openssl-dev \
+    git build-essential cmake curl libcurl4-openssl-dev \
     && rm -rf /var/lib/apt/lists/*
 
 WORKDIR /build
@@ -33,34 +28,31 @@ COPY --from=builder /build/build/bin/*.so* /app/
 COPY --from=ghcr.io/astral-sh/uv:latest /uv /uvx /usr/local/bin/
 
 RUN apt-get update && apt-get install -y --no-install-recommends \
-    python3 \
-    python3-venv \
-    curl \
-    ffmpeg \
-    libgomp1 \
-    espeak-ng \
-    libsndfile1 \
-    git \
+    python3 python3-venv curl ffmpeg libgomp1 espeak-ng libsndfile1 git \
     && rm -rf /var/lib/apt/lists/*
 
 WORKDIR /app
 
-COPY pyproject.toml ./
+COPY pyproject.toml uv.lock ./
+
+RUN --mount=type=cache,target=/root/.cache/uv \
+    uv venv /app/.venv && \
+    uv sync --frozen --no-dev --extra inference --no-install-project
+
 COPY scripts/ ./scripts/
 COPY supervisord.conf /etc/supervisord.conf
 
-RUN uv venv /app/.venv
-RUN uv sync --no-dev --extra inference --no-install-project
-
 COPY src/ ./src/
 COPY proto/ ./proto/
+
 RUN --mount=type=cache,target=/root/.cache/uv \
     uv run scripts/gen_proto.py
 
-RUN uv sync --no-dev --extra inference
-RUN uv pip install supervisor
-RUN uv pip install pip
-RUN uv cache clean
+RUN --mount=type=cache,target=/root/.cache/uv \
+    uv sync --frozen --no-dev --extra inference
+
+RUN --mount=type=cache,target=/root/.cache/uv \
+    uv pip install supervisor pip
 
 ENV PYTHONUNBUFFERED=1 \
     PYTHONDONTWRITEBYTECODE=1 \
@@ -69,9 +61,6 @@ ENV PYTHONUNBUFFERED=1 \
     UV_CACHE_DIR=/tmp/uv-cache \
     LD_LIBRARY_PATH="/app:$LD_LIBRARY_PATH"
 
-
 EXPOSE 8001 8051
-
-ENTRYPOINT []
 
 CMD ["supervisord", "-c", "/etc/supervisord.conf"]
