--- a/supervisord.conf
+++ b/supervisord.conf
@@ -14,20 +14,20 @@ pidfile=/var/run/supervisord.pid
 ; stderr_logfile=/dev/stderr
 ; stderr_logfile_maxbytes=0
 
-[program:inf_tts]
-command=inf_tts
-autostart=true
-autorestart=false
-stdout_logfile=/dev/stdout
-stdout_logfile_maxbytes=0
-stderr_logfile=/dev/stderr
-stderr_logfile_maxbytes=0
-
-; [program:inf_stt]
-; command=inf_stt
+; [program:inf_tts]
+; command=inf_tts
 ; autostart=true
 ; autorestart=false
 ; stdout_logfile=/dev/stdout
 ; stdout_logfile_maxbytes=0
 ; stderr_logfile=/dev/stderr
 ; stderr_logfile_maxbytes=0
+
+[program:inf_stt]
+command=inf_stt
+autostart=true
+autorestart=false
+stdout_logfile=/dev/stdout
+stdout_logfile_maxbytes=0
+stderr_logfile=/dev/stderr
+stderr_logfile_maxbytes=0
